--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -335,7 +335,7 @@ The movie theaters market experienced fast growth. According to Muhlberger (2013
 
 <br>
 
-The importance of cinema during this period maybe undestimated by our contemporary eyes. However, the two senatorial rapporteur explain that :
+The importance of cinema during this period maybe underestimated by our contemporary eyes. However, the two senatorial rapporteur explain that :
 
 " until the advent of the 'petite lucarne' - i.e. television - in households, movie theater had a monopoly on the broadcasting of images. People frequented the theater, not to see a film, but rather to watch a program consisting of one or more short films, news, the trailer for the next film and, after the intermission and advertising, of the 'feature film'."
 
@@ -400,7 +400,7 @@ Av_Growth_rate_1966_1992 <- Attendance_nat %>%
   round(., digits=1)
 ```
 
-Our analytic journey starts in 1966, which is the first availabe year in our used database. The CNC's data shows that trend that was observed between 1957 and 1966 continued over the next 26 years. Indeed, between 1966 and 1992, attendance was halved (`r Growth_rate_1966_1992` % with an average growth rate of `r Av_Growth_rate_1966_1992` % during the period). The movie theater market experienced especially two periods of sharp decline. Firstly, from1966 to 1969 attendance droped by `r abs(Growth_rate_1966_1969)` %. During this period, movie theaters witnessed 234 millions of entries in 1966 but only 183 millions in 1969. Similarly, in the decade spanning from1982 and 1992, attendance fell from 201 million to 115 million felt, representing a `r abs(Growth_rate_1982_1992)` % decrease.
+Our analytic journey starts in 1966, which is the first available year in our used database. The CNC's data shows that trend that was observed between 1957 and 1966 continued over the next 26 years. Indeed, between 1966 and 1992, attendance was halved (`r Growth_rate_1966_1992` % with an average growth rate of `r Av_Growth_rate_1966_1992` % during the period). The movie theater market experienced especially two periods of sharp decline. Firstly, from1966 to 1969 attendance dropped by `r abs(Growth_rate_1966_1969)` %. During this period, movie theaters witnessed 234 millions of entries in 1966 but only 183 millions in 1969. Similarly, in the decade spanning from1982 and 1992, attendance fell from 201 million to 115 million felt, representing a `r abs(Growth_rate_1982_1992)` % decrease.
 
 ```{r}
 #Graphic of the evolution of attendance in time
@@ -449,7 +449,6 @@ base_year <- att_dep_1 %>%
 att_dep_1 <- left_join(att_dep_1,base_year, by= 'departement_code') %>%
   mutate(attendance_evolution = (attendance_dep/base - 1)*100)
 ```
-
 
 The map below illustrates the evolution of attendance by department and year in France. Each year reflects the total growth rate compared to the base year of 1966. It is noteworthy that the majority of the departments are affected by a decline; however, this trend is not consistent across all departments. Some regions experience periods of decline, while others remain relatively stable over time. The departments in the north-east of the Hexagon undergo a more pronounced decline in attendance. In contrast, certain departments in the Ile-de-France and the south-east of the territory exhibit better resilience, even experiencing significant growth phases.
 
@@ -513,7 +512,7 @@ recette_nat_without_inf <-recettes_without_inflation %>%
 )
 ```
 
-Intriguingly, despite the observed drop in attendance, the movie of the movie theater industry increases from 1966 to 1982.
+Intriguingly, despite the observed drop in attendance, the revenue of the movie theater industry increases from 1966 to 1982.
 
 ```{r}
 Re_graph1 <- recette_nat %>% 
@@ -539,6 +538,7 @@ Re_graph2 <- recette_nat_without_inf %>%
 
 ggplotly(Re_graph2, dynamicTicks = TRUE)
 ```
+
 The observed growth during the 70s can be partly explained by a continuous increase in the average revenue per ticket sold, indicating a rise in ticket prices.
 
 ```{r}
@@ -614,7 +614,6 @@ ggplotly(Se_Sc_graph1, dynamicTicks = TRUE) %>%
 ```
 
 <br>
-
 
 The contradictory trends in the number of seats and screens can be comprehended through a structural change in the movie theater market, as explained by Thiolliere and Ralite (2003). Before the late '60s, a significant portion of the movie theater market was dominated by single-screen theaters with a substantial number of seats. However, this changed in the second half of the 20th century. There was a transition from one-room movie theaters to halls with fewer seats but a plural number of screens.
 
@@ -711,7 +710,7 @@ att_dep_2 <- left_join(att_dep_2,base_year, by= 'departement_code') %>%
 map_data2 <- merge(france_shape, att_dep_2, by = "departement_code")
 
 tm_shape(map_data2) +
-tm_fill(fill="attendance_evolution", style = "fixed", breaks=chosen_breaks, palette="-RdYlBu", midpoint=0) +
+tm_fill(fill="attendance_evolution", style = "fixed", breaks=chosen_breaks, palette="-RdYlBu", midpoint=0)) +
 tm_borders() +
 tm_facets(by = "year", nrow = 2, ncol = 3)+
 tm_compass(type="8star",position=c("RIGHT","TOP"),show.labels = 1, size =3)+
@@ -720,7 +719,7 @@ tm_title_out(text ="Evolution of attendance by departement from 1993 to 2019 com
 tm_style("white")
 ```
 
-Numerous scientific papers and institutional reports agree that this revival is due to the development of multiplexes (Blanchard, 2014 ; CNC, 2013; Muhlberger, 2013; Thiolliere and Ralite, 2003). Theses structures would have reignited consumer interest in movie theaters. 
+Numerous scientific papers and institutional reports agree that this revival is due to the development of multiplexes (Blanchard, 2014 ; CNC, 2013; Muhlberger, 2013; Thiolliere and Ralite, 2003). Theses structures would have reignited consumer interest in movie theaters.
 
 <br>
 
@@ -835,7 +834,7 @@ Se_Growth_rate_1993_2022 <- Equip_nat %>%
   round(.,digits = 0)
 ```
 
-The number of seats has also experienced a resurgence. While this growth doesn't fully offset the historic decline witnessed in the second half of the 20th century, the increase is substantial compared to the levels observed in 1993. In total, the number of seats has grown by `r Se_diff_rate_1993_2022`  seats, reflecting a growth rate of `r Se_Growth_rate_1993_2022` %.
+The number of seats has also experienced a resurgence. While this growth doesn't fully offset the historic decline witnessed in the second half of the 20th century, the increase is substantial compared to the levels observed in 1993. In total, the number of seats has grown by `r Se_diff_rate_1993_2022` seats, reflecting a growth rate of `r Se_Growth_rate_1993_2022` %.
 
 ```{r}
 #Evolution of the number of Seats
@@ -862,6 +861,7 @@ ggplotly(Se_graph3, dynamicTicks = TRUE)
 
 <br>
 
+
 ```{r}
 seance_nat <- cnc_data_clean %>%
   group_by(year) %>%
@@ -884,7 +884,90 @@ Se_Sc_graph2 <- Equip_nat %>%
 ggplotly(Se_Sc_graph2, dynamicTicks = TRUE)
 ```
 
-Simultaneously, the number of screenings per movie theater more than doubled.
+An interesting observation is that the be diversity in the departmental trajectories exist also in the evolution of the number of seats. The plot below contains an index representing each department's evolution in the total national number of seats. Precisely, each year indicates the growth rate of their share in the total national level aggregate relatively to the observed level in 1966. In other words, it can be understood as a dynamic index of concentration. The graph indicates that France's north-east has seen a decline of its share over the last 60 years. On the other side, some departments in Ile-de-France and the south-east experienced a positive trend. It is also true, but to a lesser extent, for the west of the Hexagon.
+
+```{r}
+seats_dep <- cnc_data_clean %>%
+  group_by(departement_code, year) %>%
+  summarise(capacité_dep = sum(fauteuils))
+
+seats_fr <- Equip_nat %>%
+  select(year, Seats)
+
+seats_dep <- left_join(seats_dep, seats_fr, by= 'year') %>%
+  filter(year == 1968 | year == 1975 | year == 1982 | year == 1990 | year == 1999 | year == 2008 | year == 2013  | year == 2019) %>%
+  mutate(per_seats_dep = capacité_dep/Seats * 100)
+  
+base_year <- seats_dep %>%
+  group_by(departement_code) %>%
+  filter(year == 1968) %>%
+  select(per_seats_dep, departement_code) %>%
+  rename(base=per_seats_dep)
+
+seats_dep <- left_join(seats_dep, base_year, by = "departement_code") %>%
+  mutate(per_seats_dep_change = (per_seats_dep / base -1)*100)
+```
+
+```{r fig.width=10, fig.height=12}
+#we look at the temporal evolution of the share of the department's capacity compared to the national capacity to see where the "supply" is concentrated over time.
+map_data3 <- merge(france_shape, seats_dep, by = "departement_code")
+
+ggplot(map_data3, aes(fill = per_seats_dep_change)) +
+  geom_sf() +
+  scale_fill_viridis_c(option = "C") + 
+  labs(title = "Evolution of the relative concentration of the offer of seats by department in France", fill = "Growth rate") +
+  theme_classic() +
+  annotation_scale()+
+  annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
+  facet_wrap(~year, ncol = 3)+
+  theme(legend.position = "bottom",
+        legend.title = element_text(hjust = 0.5))
+
+```
+<br>
+This heterogeneity seems partly linked to the evolution of population. comparable index, focusing on the population share, underscores a similar concentration for departments around Paris and in the southeast of France. Nevertheless, the decrease in the share of the North-East is more important in the seat index than to the population one.
+```{r}
+pop_dep <- insee_data_clean %>%
+  group_by(departement_code, year) %>%
+  summarise(population_dep = sum(POND2))
+
+pop_fr <- insee_data_clean %>%
+  group_by(year) %>%
+  summarise(population_fr = sum(POND2))
+
+pop_dep <- left_join(pop_dep,pop_fr, by= 'year') %>%
+  mutate(per_pop_dep = population_dep/population_fr * 100)
+
+base_year <- pop_dep %>%
+  group_by(departement_code) %>%
+  filter(year == 1968) %>%
+  select(per_pop_dep, departement_code) %>%
+  rename(base=per_pop_dep)
+
+pop_dep <- left_join(pop_dep, base_year, by = "departement_code") %>%
+  mutate(per_pop_dep_change = (per_pop_dep / base -1)*100)
+```
+
+```{r fig.width=10, fig.height=12}
+#We loot at the temporal evolution of each department's share in the population to identify where the population is concentrated over time.
+
+map_data4 <- merge(france_shape, pop_dep, by = "departement_code")
+
+ggplot(map_data4, aes(fill = per_pop_dep_change)) +
+  geom_sf() +
+  scale_fill_viridis_c(option = "C") + 
+  labs(title = "Evolution of the relative concentration of the population by department in France ", fill = "Growth rate") +
+  theme_classic() +
+  annotation_scale()+
+  annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
+  facet_wrap(~year, ncol = 3)+
+  theme(legend.position = "bottom",
+        legend.title = element_text(hjust = 0.5))
+```
+
+
+<br>
+The number of screenings per movie theater more than doubled since 1992.
 
 ```{r}
 Seances_graph <- seance_nat %>%
@@ -962,6 +1045,7 @@ AE_graph2 <-Attendance_AE_nat %>%
 
 ggplotly(AE_graph2)
 ```
+
 ```{r}
 growth_revenue_2002_2019 <- calculate_growth_rate(recette_nat, 2002, 2019)
 
@@ -991,7 +1075,6 @@ Etablissement_AE <- cnc_data_clean %>%
             part_AE = nb_etablissement_AE/nb_etablissement*100)
 ```
 
-
 In 2021, arthouse cinema claimed a remarkable 63% of the French film market, showcasing a significant shift in audience preferences and the enduring popularity of these films. This success not only reinforces the cultural and artistic significance of arthouse productions but also positions them as dominant players in the French cinematic landscape. The growing market share reflects a broader trend where audiences increasingly seek unique narratives and artistic merit, signaling a more discerning viewer base valuing diversity and intellectual engagement. This success underscores the film industry's adaptability to changing tastes, with increased support and investment in arthouse cinema from filmmakers, producers, and distributors. In summary, 2021 marks a pivotal moment, indicating a transformative shift in French audiences' cinematic preferences toward arthouse films.
 
 ```{r}
@@ -1005,87 +1088,6 @@ AE_graph4 <-  Etablissement_AE %>%
 ggplotly(AE_graph4)
 ```
 
-# Evolution of population in France and their impact on cinema industry
-
-## How population and offer of seats by department had evolved
-
-```{r}
-pop_dep <- insee_data_clean %>%
-  group_by(departement_code, year) %>%
-  summarise(population_dep = sum(POND2))
-
-pop_fr <- insee_data_clean %>%
-  group_by(year) %>%
-  summarise(population_fr = sum(POND2))
-
-pop_dep <- left_join(pop_dep,pop_fr, by= 'year') %>%
-  mutate(per_pop_dep = population_dep/population_fr * 100)
-
-base_year <- pop_dep %>%
-  group_by(departement_code) %>%
-  filter(year == 1968) %>%
-  select(per_pop_dep, departement_code) %>%
-  rename(base=per_pop_dep)
-
-pop_dep <- left_join(pop_dep, base_year, by = "departement_code") %>%
-  mutate(per_pop_dep_change = (per_pop_dep / base -1)*100)
-```
-
-```{r fig.width=10, fig.height=12}
-#We loot at the temporal evolution of each department's share in the population to identify where the population is concentrated over time.
-
-map_data3 <- merge(france_shape, pop_dep, by = "departement_code")
-
-ggplot(map_data3, aes(fill = per_pop_dep_change)) +
-  geom_sf() +
-  scale_fill_viridis_c(option = "C") + 
-  labs(title = "Evolution of the relative concentration of the population by department in France ", fill = "Evolution of the relative concentration of the population by department") +
-  theme_classic() +
-  annotation_scale()+
-  annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
-  facet_wrap(~year, ncol = 3)+
-  theme(legend.position = "bottom",
-        legend.title = element_text(hjust = 0.5))
-```
-
-```{r}
-seats_dep <- cnc_data_clean %>%
-  group_by(departement_code, year) %>%
-  summarise(capacité_dep = sum(fauteuils))
-
-seats_fr <- Equip_nat %>%
-  select(year, Seats)
-
-seats_dep <- left_join(seats_dep, seats_fr, by= 'year') %>%
-  filter(year == 1968 | year == 1975 | year == 1982 | year == 1990 | year == 1999 | year == 2008 | year == 2013  | year == 2019) %>%
-  mutate(per_seats_dep = capacité_dep/Seats * 100)
-  
-base_year <- seats_dep %>%
-  group_by(departement_code) %>%
-  filter(year == 1968) %>%
-  select(per_seats_dep, departement_code) %>%
-  rename(base=per_seats_dep)
-
-seats_dep <- left_join(seats_dep, base_year, by = "departement_code") %>%
-  mutate(per_seats_dep_change = (per_seats_dep / base -1)*100)
-```
-
-```{r fig.width=10, fig.height=12}
-#we look at the temporal evolution of the share of the department's capacity compared to the national capacity to see where the "supply" is concentrated over time.
-map_data4 <- merge(france_shape, seats_dep, by = "departement_code")
-
-ggplot(map_data4, aes(fill = per_seats_dep_change)) +
-  geom_sf() +
-  scale_fill_viridis_c(option = "C") + 
-  labs(title = "Evolution of the relative concentration of the offer of seats by department in France", fill = "Evolution of the relative concentration of the offer of seats by department") +
-  theme_classic() +
-  annotation_scale()+
-  annotation_north_arrow(style = north_arrow_nautical, location = "tr", which_north = "true")+
-  facet_wrap(~year, ncol = 3)+
-  theme(legend.position = "bottom",
-        legend.title = element_text(hjust = 0.5))
-
-```
 
 ## Explaining the diversity in the temporal evolution of attendance by department : an econometric analysis
 
@@ -1418,190 +1420,6 @@ In conclusion, given the limitations of our models, it is not feasible to draw d
 
 <br>
 
-# Annex
-
-## Annex 1 ...
-
-## Annex 2 - Test on the CSP models for the year before 1990
-
-<center>**\\1990 and before**</center>
-
-```{r Dataset_for_the_model_b90}
-Econ_data_v2_1<- Econ_data_v2 %>% filter(year <= 1990)
-```
-
-### Test between OLS and Fixed Effect model
-
-```{r Test_between_fixed_effect_and_OLS_b90}
-
-#OLS Model
-ols_b90 <- plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="pooling")
-
-#Fixed effect model
-f_eff_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within")
-
-# F Test for Individual and/or Time Effects test
-pFtest(f_eff_b90, ols_b90)
-```
-
-### Test between Fixed and Random Model
-
-```{r Test_between_fixed_and_random_effect_b90}
-#Random effect model
-r_eff_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="random") 
-
-
-#Haussman test to determine between fixed and random effect
-phtest(f_eff_b90, r_eff_b90)
-```
-
-<br>
-
-### Tests for time-fixed effect
-
-```{r test_for_time_fixed_effect_b90}
-#Model with time-fixed effects.
-f_eff_time_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within", effect = "time")
-
-#PLM test
-plmtest(f_eff_time_b90, effect="time", type="bp")
-plmtest(f_eff_time_b90, effect="time", type="honda")
-```
-
-```{r}
-f_eff_2ways_b90 <- plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
-```
-
-<br>
-
-### Test for unit roots
-
-```{r Test_for_unit_roots_b90}
-Panel.set<- pdata.frame(Econ_data_v2_1, index = c("departement_code", "year")) 
-
-adf.test(Econ_data_v2_1$entrées, k=2)
-```
-
-<br>
-
-### Test for serial correlation
-
-```{r Test_for_serial_correlations_b90}
-pbgtest(f_eff_2ways_b90)
-```
-
-<br>
-
-### Test of Heterosedasticity
-
-```{r #Test_for_heteroscedasticitys_b90}
-bptest(as.formula(X_Y), data = Econ_data_v2_1, studentize=F)
-```
-
-<br>
-
-### Test for cross-sectional dependence
-
-```{r Test_for_cross_sectional_dependences_b90}
-#Breusch-Pagan LM test for cross-sectional dependence
-pcdtest(f_eff_b90, test = c("lm"))
-
-#Pesaran test for cross-sectional dependence
-pcdtest(f_eff_b90, test = c("cd"))
-```
-
-<br>
-
-### Annex 3 - Test on the CSP models for the year after 1990
-
-<center>**Striclty after (1990)**</center>
-
-```{r Dataset_for_the_model_a80}
-Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
-```
-
-### Test between OLS and Fixed Effect
-
-```{r Test_between_fixed_effect_and_OLS_a90}
-
-# OLS Model
-ols_a90 <- plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="pooling")
-
-#Fixed effect model
-f_eff_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within")
-
-# F Test for Individual and/or Time Effects test
-pFtest(f_eff_a90, ols_a90)
-```
-
-<br>
-
-### Test between Fixed and Random effect model
-
-```{r Test_between_fixed_and_random_effect_a90}
-#Random effect model
-r_eff_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="random") 
-
-
-#Haussman test to determine between fixed and random effect
-phtest(f_eff_a90, r_eff_a90)
-```
-
-<br>
-
-### Test for time-fixed effect
-
-```{r test_for_time_fixed_effect_a90}
-#Model with time-fixed effects.
-f_eff_time_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within", effect = "time")
-
-#PLM test
-plmtest(f_eff_time_a90, effect="time", type="bp")
-plmtest(f_eff_time_a90, effect="time", type="honda")
-```
-
-```{r two_ways_model__specification_a90_annex}
-f_eff_2ways_a90 <- plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within",effect = "twoways")
-```
-
-<br>
-
-### Test for unit roots
-
-```{r Test_for_unit_roots_a90}
-Panel.set<- pdata.frame(Econ_data_v2_2, index = c("departement_code", "year")) 
-
-adf.test(Econ_data_v2_2$entrées, k=2)
-```
-
-<br>
-
-### Test for serial correlation
-
-```{r Test_for_serial_correlation_a90}
-pbgtest(f_eff_2ways_a90)
-```
-
-<br>
-
-### Test of Heterosedasticity
-
-```{r Test_for_heteroscedasticity_a90}
-bptest(as.formula(X_Y), data = Econ_data_v2_2, studentize=F)
-```
-
-<br>
-
-### Test for cross-sectional dependence
-
-```{r Test_for_cross_sectional_dependence_a90}
-#Breusch-Pagan LM test for cross-sectional dependence
-pcdtest(f_eff_a90, test = c("lm"))
-
-#Pesaran test for cross-sectional dependence
-pcdtest(f_eff_a90, test = c("cd"))
-```
-
 <br>
 
 # References
@@ -1725,3 +1543,189 @@ URL : [https://medium.com/\@manilwagle/how-to-deal-with-panel-data-practical-app
 **YUM** **Minchul , 2022.** Model selection for panel data models with fixed effects: a simulation study, *Applied Economics Letters*, 29:19, p. 1776-1783
 
 DOI: [10.1080/13504851.2021.1962505](https://doi.org/10.1080/13504851.2021.1962505)
+
+<br>
+
+<br>
+
+# Annex
+
+## Annex -1 Test on the CSP models for the year before 1990
+
+<center>**\\1990 and before**</center>
+
+```{r Dataset_for_the_model_b90}
+Econ_data_v2_1<- Econ_data_v2 %>% filter(year <= 1990)
+```
+
+### Test between OLS and Fixed Effect model
+
+```{r Test_between_fixed_effect_and_OLS_b90}
+
+#OLS Model
+ols_b90 <- plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="pooling")
+
+#Fixed effect model
+f_eff_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within")
+
+# F Test for Individual and/or Time Effects test
+pFtest(f_eff_b90, ols_b90)
+```
+
+### Test between Fixed and Random Model
+
+```{r Test_between_fixed_and_random_effect_b90}
+#Random effect model
+r_eff_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="random") 
+
+
+#Haussman test to determine between fixed and random effect
+phtest(f_eff_b90, r_eff_b90)
+```
+
+<br>
+
+### Tests for time-fixed effect
+
+```{r test_for_time_fixed_effect_b90}
+#Model with time-fixed effects.
+f_eff_time_b90 <-plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within", effect = "time")
+
+#PLM test
+plmtest(f_eff_time_b90, effect="time", type="bp")
+plmtest(f_eff_time_b90, effect="time", type="honda")
+```
+
+```{r}
+f_eff_2ways_b90 <- plm(X_Y, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
+```
+
+<br>
+
+### Test for unit roots
+
+```{r Test_for_unit_roots_b90}
+Panel.set<- pdata.frame(Econ_data_v2_1, index = c("departement_code", "year")) 
+
+adf.test(Econ_data_v2_1$entrées, k=2)
+```
+
+<br>
+
+### Test for serial correlation
+
+```{r Test_for_serial_correlations_b90}
+pbgtest(f_eff_2ways_b90)
+```
+
+<br>
+
+### Test of Heterosedasticity
+
+```{r #Test_for_heteroscedasticitys_b90}
+bptest(as.formula(X_Y), data = Econ_data_v2_1, studentize=F)
+```
+
+<br>
+
+### Test for cross-sectional dependence
+
+```{r Test_for_cross_sectional_dependences_b90}
+#Breusch-Pagan LM test for cross-sectional dependence
+pcdtest(f_eff_b90, test = c("lm"))
+
+#Pesaran test for cross-sectional dependence
+pcdtest(f_eff_b90, test = c("cd"))
+```
+
+<br>
+
+### Annex 2 - Test on the CSP models for the year after 1990
+
+<center>**Striclty after (1990)**</center>
+
+```{r Dataset_for_the_model_a80}
+Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
+```
+
+### Test between OLS and Fixed Effect
+
+```{r Test_between_fixed_effect_and_OLS_a90}
+
+# OLS Model
+ols_a90 <- plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="pooling")
+
+#Fixed effect model
+f_eff_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within")
+
+# F Test for Individual and/or Time Effects test
+pFtest(f_eff_a90, ols_a90)
+```
+
+<br>
+
+### Test between Fixed and Random effect model
+
+```{r Test_between_fixed_and_random_effect_a90}
+#Random effect model
+r_eff_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="random") 
+
+
+#Haussman test to determine between fixed and random effect
+phtest(f_eff_a90, r_eff_a90)
+```
+
+<br>
+
+### Test for time-fixed effect
+
+```{r test_for_time_fixed_effect_a90}
+#Model with time-fixed effects.
+f_eff_time_a90 <-plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within", effect = "time")
+
+#PLM test
+plmtest(f_eff_time_a90, effect="time", type="bp")
+plmtest(f_eff_time_a90, effect="time", type="honda")
+```
+
+```{r two_ways_model__specification_a90_annex}
+f_eff_2ways_a90 <- plm(X_Y, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within",effect = "twoways")
+```
+
+<br>
+
+### Test for unit roots
+
+```{r Test_for_unit_roots_a90}
+Panel.set<- pdata.frame(Econ_data_v2_2, index = c("departement_code", "year")) 
+
+adf.test(Econ_data_v2_2$entrées, k=2)
+```
+
+<br>
+
+### Test for serial correlation
+
+```{r Test_for_serial_correlation_a90}
+pbgtest(f_eff_2ways_a90)
+```
+
+<br>
+
+### Test of Heterosedasticity
+
+```{r Test_for_heteroscedasticity_a90}
+bptest(as.formula(X_Y), data = Econ_data_v2_2, studentize=F)
+```
+
+<br>
+
+### Test for cross-sectional dependence
+
+```{r Test_for_cross_sectional_dependence_a90}
+#Breusch-Pagan LM test for cross-sectional dependence
+pcdtest(f_eff_a90, test = c("lm"))
+
+#Pesaran test for cross-sectional dependence
+pcdtest(f_eff_a90, test = c("cd"))
+```
